syntax = "proto3";

package grocer;

option csharp_namespace = "Grocer.Services";
option go_package = "github.com/GroceryOptimizer/store/proto;grocer";

// Store to Hub service
service StoreToHubService {
    rpc HandShake (HandShakeRequest) returns (HandShakeResponse);
    rpc UpdateInventory (UpdateInventoryRequest) returns (UpdateInventoryResponse);
}

// Hub to Store service
// Not in use for now
service HubToStoreService {
    rpc UpdateInventory (UpdateInventoryResponse) returns (UpdateInventoryRequest);
}

message UpdateInventoryRequest {
    string storeId = 1;
    repeated StockItem items = 2;
}

message UpdateInventoryResponse {
    //Timestamp timestamp = 1;
}

message StockItem {
    string productId = 1;
    int32 quantity = 2;
    double price = 3;
}  

message HandShakeRequest {
    Store store = 1;
}

message HandShakeResponse {
    string storeId = 1;
    //Timestamp timestamp = 2;
}

message Store {
    string name = 1;
    Coordinates location = 2;
    string grpcAddress = 3;
}

message Coordinates {
    double latitude = 1;
    double longitude = 2;
}

message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
}
